--- a/chat/src/index.css
+++ b/chat/src/index.css
@@ -5,21 +5,12 @@
 }
 body
 {
-  background-color: rgb(171, 77, 54);
+  background-color: rgb(54, 130, 171);
 }
-/* body
-{
-  background-image: url(https://cdn.pixabay.com/photo/2016/02/23/07/37/wall-1217083__340.jpg);
-  width: 100%;
-  height: 700px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  /* background-size: cover;
-}  */
 .main
 {
   width: 400px;
-  margin: 40px auto 50px auto;
+  margin: 50px auto 50px auto;
 }
 .form
 {
@@ -27,7 +18,7 @@ body
   width: 100%;
   font-size: 18px;
   border-radius: 10px;
-  box-shadow: 2px 2px 15px darkcyan;
+  box-shadow: 2px 2px 15px rgb(128, 235, 235);
   color: #fff;
 }
 h1
@@ -67,13 +58,13 @@ label
 }
 button 
 {
-  width: 300px;
+  width: 100%;
   margin: 6%;
   margin-left: 13%;
   padding: 7px;
   font-size: 16px;
   border-radius: 10px;
-  background-color: orange;
+  background-color: rgb(0, 157, 255);
   color: #fff;
 }
 #account
