--- a/chat/src/index.css
+++ b/chat/src/index.css
@@ -1,18 +1,87 @@
 body::-webkit-scrollbar {
   display: none;
 }
+.nav-bar
+{
+  background-color: rgb(205, 242, 255);
+  font-family: serif; 
+}
 .nav-text
 {
-  position: fixed;
+  position: absolute;
   right: 0;
   margin: 20px;
 }
-.main-div
+.nav-login
+{
+  text-decoration: none;
+  color: black;
+}
+.nav-register
+{
+  text-decoration: none;
+  color: black;
+}
+.nav-login:hover 
+{
+  text-decoration: underline;
+}
+.nav-register:hover 
+{
+  text-decoration: underline;
+}
+.nav-logo
+{
+  width: auto;
+  height: 30px;
+}
+.nav-logo:hover 
+{
+  transform: scale(1.3);
+}
+.home-img
+{
+  animation: slidein 3s ease 0s infinite alternate both;
+  width: auto;
+  height: 150px;
+  display: block;
+  margin: auto;
+  margin-top: 90px;
+  position: relative;
+  z-index: -1;
+}
+@keyframes slidein 
+{
+  0% {left:0px; top:0px;}
+  50%{left:0px; top:100px;}
+  100%{left:0px; top:0px;}
+}
+.home-h1
+{
+  text-align: center;
+
+
+  padding: 25px;
+    margin: 40px;
+    box-shadow: 2 2 black;
+    box-shadow: 0px -10px 10px grey;
+    background-color: white;
+    color: black;
+}
+.login-card
 {
   margin: auto;
-  margin-top: 150px;
+  margin-top: 40px;
   font-family: serif;
   font-size: 20px;
+  width: fit-content;
+}
+.register-card
+{
+  margin: auto;
+  margin-top: 20px;
+  font-family: serif;
+  font-size: 17px;
   width: fit-content;
 }
 .input
@@ -30,26 +99,21 @@ body::-webkit-scrollbar {
 {
   position: sticky;
   top: 0;
-  /* z-index: 9999; */
+  z-index: 1;
 }
 .spinner-border
 {
-  width: 5rem;
-  height: 5rem;
-  margin-top: 15rem;
+  width: 4rem;
+  height: 4rem;
+  margin-top: 9rem;
   color: grey;
 }
 .dropdown-toggle::after {
   content: none;
 }
-#dropdown
+.dropdown-items
 {
-  text-align: end;
-  margin: 50px;
-}
-#dropdown-list
-{
-  font-size: 20px;
+  font-size: 15px;
 }
 #profile-head
 {
@@ -58,7 +122,7 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: row;
   justify-content:space-between;
-  margin-bottom: 6%;
+  margin-bottom: 8%;
 }
 #profile-name
 {
@@ -90,10 +154,20 @@ body::-webkit-scrollbar {
   position: sticky;
   top: 0;
 }
+.back-arrow
+{
+  font-size: 30px;
+  position: fixed;
+  top: 0;
+  margin: 10px;
+  color: rgb(79, 83, 83);
+}
+.back-arrow:hover {
+  color: whitesmoke;
+}
 #msg-h2
 {
   font-family: cursive;
-  /* font-weight: bold; */
   padding: 3px;
     text-align: center;
     position: inherit;
@@ -108,6 +182,10 @@ body::-webkit-scrollbar {
   padding: 5px;
   border-radius: 15px;
 }
+.msg-time
+{
+  font-size: x-small;
+}
 .msg-footer
 {
   border-top: "10px solid black";
@@ -119,4 +197,9 @@ body::-webkit-scrollbar {
 .modal 
 {
 margin-top: 250px;
+}
+.toast
+{
+  z-index: 2;
+  position: "top-right";
 }
